@@ -175,9 +175,6 @@ class MainWindow(QWidget):
         QTimer.singleShot(0, self._connect_resize_keyhint)
         objreg.get('config').changed.connect(self.on_config_changed)
 
-        if config.get('ui', 'hide-mouse-cursor'):
-            self.setCursor(Qt.BlankCursor)
-
         objreg.get("app").new_window.emit(self)
 
     def _init_downloadmanager(self):
